--- a/src/finance-terminal/frontend/index.html
+++ b/src/finance-terminal/frontend/index.html
@@ -1,79 +1,41 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="chart.css">
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-    </head>
-    <body>
-        <!-- <form action="/" method="post">
-            Assets:<input type="text" name="assets">
-            Debts:<input type="text" name="debts">
-            <input type="submit" value="Submit">
-        </form> -->
-        <div class="chart-container">
-            <canvas id="myChart"></canvas>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <link rel="stylesheet" href="chart.css">
+
+    <title>Hello, world!</title>
+  </head>
+  <body>
+   <header>
+      <!-- Fixed navbar -->
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="index.html">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="form.html">input <span class="sr-only">(current)</span></a>
+            </li>
         </div>
+      </nav>
+    </header>
+    <div class="chart-container">
+      <canvas id="myChart"></canvas>
+    </div>
 
-       <script>
-            const xlables = [];
-            const assetsByMonth = [];
-            const debtsByMonth = [];
 
-            getData();
-            async function getData(){
-                const response = await fetch('finances.csv');
-                const data = await response.text();
-                const rows = data.split('\n');
-
-                rows.forEach(elt => {
-                    const row = elt.split(',');
-                    const date = row[0]
-                    xlables.push(date)
-                    const assets = row[1]
-                    assetsByMonth.push(assets);
-                    const debts = row[2]
-                    debtsByMonth.push(debts);
-                    console.log(assets);
-                });
-            }
-            const ctx = document.getElementById('myChart').getContext('2d');
-            const myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: xlables,
-                    datasets: [{
-                        label: 'Assets',
-                        data: assetsByMonth,
-                        backgroundColor: [
-                            'rgba(72, 143, 49, .75)',
-                        ],
-                        borderColor: [
-                            'rgba(72, 143, 49, .75)',
-                        ],
-                        borderWidth: 1
-                    },{
-                        label: 'Debts',
-                        data: debtsByMonth,
-                        backgroundColor: [
-                            'rgba(232, 48, 48, .5)',
-                        ],
-                        borderColor: [
-                            'rgba(232, 48, 48, .5)',
-                        ],
-                        borderWidth: 1
-                    },
-                ]
-                }
-            });
-        </script>
-    </body>
+    <script src="js/graph.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
